feat: update profile and resume

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JIA-CHIH LIN</title>
+    <title>Roger Lin</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,7 +14,7 @@
     <header>
         <header>
             <div id="header-content" class="header-content wrapper-content">
-                <h1 class="logo">JIA-CHIH LIN</h1>
+                <h1 class="logo">Roger Lin</h1>
                 <nav class="header-nav">
                     <!-- Home Icon -->
                     <a href="" class="link-icon" target="_blank" title="Home">
@@ -41,11 +41,11 @@
                 <!-- 左側介紹 -->
                 <div class="wrapper-primary-text">
                     <div class="title-with-image">
-                        <h2 class="primary__title">JIA-CHIH</h2>
+                        <h2 class="primary__title">Roger Lin</h2>
                         <img src="assets/images/IMG_9317.jpg" alt="Profile Picture" class="profile-picture">
                     </div>
                     <p class="primary__text">
-                        Hi, I'm JIA-CHIH LIN! I specialize in web system development, with a focus on building back-end systems and automating deployments. I'm passionate about creating efficient, scalable solutions that streamline workflows.
+                        Hi, I'm Roger Lin! I specialize in web system development, with a focus on building back-end systems and automating deployments. I'm passionate about creating efficient, scalable solutions that streamline workflows.
                     </p>
                     <p class="primary__text">
                         I served over 3 years at Wistron Corporation, where I built internal systems using Django and Laravel. I also brought in Jenkins and GitLab CI/CD pipelines to help push the company's digital transformation forward.
@@ -67,9 +67,9 @@
                         <p class="experience__time">Feb 2021 - Jul 2024</p>
                         <p class="experience__description">
                             <strong>Skills:</strong> 
-                            <strong>Programming Languages:</strong> Python (advanced), PHP (advanced), TypeScript (intermediate), C++, Java, Fortran<br>
-                            <strong>Frameworks:</strong> Django, Laravel, NestJS, Flask<br>
-                            <strong>Developing Tools:</strong> Linux, Docker, Docker Compose, Git, Supervisord, MySQL, PostgreSQL, Oracle, MongoDB, Prisma, Redis, Jenkins, Azure, Apache Airflow, Kafka, Swagger
+                            <strong>Programming Languages:</strong> Python(advanced), PHP(advanced), TypeScript(advanced), JavaScript, C++, JAVA<br>
+                            <strong>Frameworks:</strong> Django, Laravel, NestJS, Node.js, React.js, Flask<br>
+                            <strong>Developing Tools:</strong> Linux, Docker, Git, Nginx, BERT, Supervisord, MySQL, PostgreSQL, Oracle, MongoDB, Prisma, Redis, Jenkins, Azure, Apache Airflow, Kafka, Swagger, Cloudflare
                         </p>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         </div>
                         <p class="education__major">Bachelor of Science, Geosciences</p>
                         <p class="education__time">Sep 2014 - Jun 2018</p>
-                        <p class="education__description">Presidential Award, National Taiwan University for 3 semesters</p>
+                        <p class="education__description">President's Award, National Taiwan University for 3 semesters</p>
                     </div>
                 </div>
             </div>
@@ -117,13 +117,14 @@
                 <div class="contribution-text">
                     <!-- <h3 class="contribution__title">Contributions</h3> -->
                     <p class="contribution__description">
-                        ● Employed <strong>Laravel</strong> (PHP-based web framework) and <strong>Jenkins</strong> to build an automated system, resulting in annual company savings of $80,000.<br>
-                        ● Adopted <strong>Airflow</strong> and <strong>Kafka</strong> to access company public data, assisting developers in reducing time expenses by 16 hours per month spent on data collection and accuracy.<br>
-                        ● Introduced <strong>GitLab CI/CD</strong>, boosting unit testing coverage from 0% to 10% and slashing average deployment time from 40 to 5 minutes.<br>
-                        ● Utilized <strong>SQL</strong> and <strong>Supervisord</strong> (a process control tool) to process 45GB data, contributing to the delivery of real-time insights into production status for managers.<br>
-                        ● Implemented <strong>WebSocket</strong> for online collaborative form editing, saving each project leader up to 8 hours per month on data organization and weekly report distribution.<br>
-                        ● Integrated legacy systems with <strong>Azure</strong> login, achieving Single Sign-On and simplifying the user login process.<br>
-                        ● Incorporated legacy systems with <strong>SSL</strong> and <strong>HTTP/2</strong>, enhancing the security of internal company data and reducing webpage loading time to less than 0.5 seconds.
+                        ● Built a bug search engine using Django (Python-based web framework) and BERT (Bidirectional Encoder Representations from Transformers), <strong>reducing search time by 16 hours per month for a team of 10 engineers</strong>.<br>
+                        ● Developed an automation infrastructure using Laravel (PHP-based web framework) and Jenkins, <strong>leading to $80,000 in annual savings for the company</strong>.<br>
+                        ● Streamlined data collection processes, adopting Airflow and Kafka to access company public data, <strong>and saved 16 hours per month for developers</strong>.<br>
+                        ● Implemented GitLab CI/CD, increasing unit testing coverage by 10%, improving system reliability, and <strong>reducing deployment time from 40 to 5 minutes</strong>. Also, set up monitoring and alerts, enhancing troubleshooting.<br>
+                        ● Processed 45GB of data using SQL and Supervisord, <strong>implementing information retrieval systems to deliver real-time insights to managers and improving production decision-making</strong>.<br>
+                        ● Implemented WebSocket for collaborative forms editing, <strong>saving 8 hours per month for 20 project leaders on data organization and weekly report distribution</strong>.<br>
+                        ● Integrated legacy systems with Azure login, <strong>achieving Single Sign-On for 300+ employees</strong>, simplifying the user login process.<br>
+                        ● Enhanced security and <strong>reduced webpage load time to under 0.5 seconds</strong> by incorporating SSL and HTTP/2 across legacy systems, improving performance for internal company portals.
                     </p>
                 </div>
             </div>
@@ -133,8 +134,8 @@
     <footer>
         <div class="footer-content wrapper-content">
             <div>
-                <div class="logo">JIA-CHIH LIN</div>
-                <div class="footer__license">© 2024 JIA-CHIH LIN</div>
+                <div class="logo">Roger Lin</div>
+                <div class="footer__license">© 2024 Roger Lin</div>
             </div>
         </div>
     </footer>
