feat: update resume and web

--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@
                         </div>
                         <p class="education__major">Master of Software Engineering</p>
                         <p class="education__time">Sep 2024 - Dec 2025</p>
-                        
+                        <p class="education__description">
+                            <strong>GPA:</strong> 4.00<br>
+                            <strong>Courses in academic record:</strong> <br>
+                            Web Programming, <br>
+                            Network Programming, <br>
+                            Neural Network Programming, <br>
+                            Concurrent Programming, ..., etc.
+                        </p>
                     </div>
                     <div class="education__item">
                         <div class="school-logo-container">
@@ -136,7 +143,11 @@
 
                 <!-- Project 1 -->
                 <div class="project__item">
-                    <h4 class="project__name">Webmail System</h4>
+                    <h4 class="project__name">Webmail System
+                        <a href="https://github.com/lin777888/Webmail-System" class="link-icon" target="_blank" title="GitHub">
+                            <ion-icon name="logo-github" style="font-size: 30px;"></ion-icon>
+                        </a>
+                    </h4>
                     <p class="project__time">Sep 2024 - Dec 2024 | Web Programming</p>
                     <p class="project__description">
                         TypeScript | JavaScript | Node.js | React.js | Redux | Redis<br>
@@ -149,7 +160,11 @@
 
                 <!-- Project 2 -->
                 <div class="project__item">
-                    <h4 class="project__name">Network File Server</h4>
+                    <h4 class="project__name">Network File Server
+                        <a href="https://github.com/lin777888/network_file_server_udp" class="link-icon" target="_blank" title="GitHub">
+                            <ion-icon name="logo-github" style="font-size: 30px;"></ion-icon>
+                        </a>
+                    </h4>
                     <p class="project__time">Sep 2024 - Dec 2024 | Network Programming</p>
                     <p class="project__description">
                         Java | TCP | UDP<br>
