feat: update description

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                         <img src="assets/images/IMG_9317.jpg" alt="Profile Picture" class="profile-picture">
                     </div>
                     <p class="primary__text">
-                        Hi, I'm Roger Lin! I specialize in web system development, with a focus on building back-end systems and automating deployments. I'm passionate about creating efficient, scalable solutions that streamline workflows.
+                        Hi, I'm Roger Lin, a full-stack engineer specializing in web system development with a passion for building efficient, scalable solutions that streamline workflows and drive digital transformation.
+                        Additionally, I am an <a href="https://www.credly.com/badges/e4e1f288-99b1-47ac-96d1-671f0e37f1be/linked_in?t=spp9kc" class="link-icon" target="_blank" title="AWS Certification"><strong>AWS Certified Cloud Practitioner</strong></a>.
                     </p>
+
                     <p class="primary__text">
                         I served over 3 years at Wistron Corporation, where I built internal systems using Django and Laravel. I also brought in Jenkins and GitLab CI/CD pipelines to help push the company's digital transformation forward.
                     </p>
